Remove extraneous code

--- a/playwright/.env
+++ b/playwright/.env
@@ -1,3 +1,4 @@
-BASE_URL = https://lll-playwright-web.azurewebsites.net/
+BASE_URL = https://localhost:44398/
 TESTUSER = TestUser@lyleluppes.onmicrosoft.com
-TESTPASSWORD = 8Y94!sXf
+TESTPASSWORD = 967Y!Xfs
+CLOUD_BASE_URL = https://lll-playwright-web.azurewebsites.net/
